# advent_of_code

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  build.py  pyproject.toml  run_puzzle.py
.github/: dependabot.yml
.github/workflows/: code-quality.yml  codeql-analysis.yml  run_tests.yml  test-puzzles.yml  tests.yml
advent_of_code/: download_puzzle.py  loader.py  run_puzzle.py  solve_puzzle.py
advent_of_code/2015/day03/: part2.py
advent_of_code/2015/day04/: part1.py
advent_of_code/2015/day05/: part1.py
advent_of_code/2015/day08/: part2.py
advent_of_code/2015/day1/: part1.py
advent_of_code/2015/day10/: part1.py  part2.py  shared.py
advent_of_code/2015/day11/: shared.py
advent_of_code/2015/day12/: part1.py
advent_of_code/2015/day13/: part1.py
advent_of_code/2015/day14/: part2.py
advent_of_code/2015/day15/: part2.py
advent_of_code/2015/day16/: part1.py  shared.py
advent_of_code/2015/day17/: part1.py  part2.py  shared.py
advent_of_code/2015/day18/: part1.py  part2.py  shared.py
advent_of_code/2015/day19/: part1.py  part2.py  shared.py
advent_of_code/2015/day2/: part1.py  part2.py
advent_of_code/2015/day20/: part1.py
advent_of_code/2015/day21/: part1.py  shared.py
advent_of_code/2015/day23/: part1.py  part2.py
advent_of_code/2015/day24/: part1.py
advent_of_code/2015/day25/: part1.py  part2.py
advent_of_code/2015/day3/: part1.py
advent_of_code/2015/day4/: shared.py
advent_of_code/2015/day5/: part2.py
advent_of_code/2015/day6/: part1.py  part2.py  shared.py
advent_of_code/2015/day7/: shared.py
advent_of_code/2015/day9/: part1.py  part2.py
advent_of_code/2016/day01/: part1.py  part2.py
advent_of_code/2016/day02/: part1.py  part2.py
advent_of_code/2016/day03/: part1.py  part2.py  shared.py
advent_of_code/2016/day04/: part1.py  part2.py
advent_of_code/2016/day05/: part1.py
advent_of_code/2016/day06/: part2.py  shared.py
advent_of_code/2016/day07/: part1.py  shared.py
advent_of_code/2016/day08/: part1.py  shared.py
advent_of_code/2016/day09/: part1.py  part2.py
advent_of_code/2017/day01/: part1.py
advent_of_code/2017/day02/: part1.py
advent_of_code/2017/day04/: part2.py
advent_of_code/2017/day05/: part1.py
advent_of_code/2017/day06/: shared.py
advent_of_code/2017/day07/: part2.py  shared.py
advent_of_code/2017/day08/: part1.py  shared.py
advent_of_code/2017/day10/: part2.py  shared.py
advent_of_code/2017/day11/: part2.py
advent_of_code/2017/day12/: part1.py  shared.py
advent_of_code/2017/day13/: part1.py  part2.py  shared.py
advent_of_code/2017/day14/: part2.py
advent_of_code/2017/day15/: part2.py
advent_of_code/2017/day16/: shared.py
advent_of_code/2017/day18/: part1.py  shared.py
advent_of_code/2017/day19/: part1.py  shared.py
advent_of_code/2017/day20/: part1.py  part2.py
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/utils/: graph.rs  grid.rs  math.rs  mod.rs
rust/src/year2016/: day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  mod.rs
rust/src/year2018/: day19.rs  day20.rs  day21.rs  day22.rs  mod.rs
rust/src/year2021/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day20.rs  day25.rs  mod.rs
rust/src/year2022/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day21.rs  day23.rs  day25.rs  mod.rs
tests/: test_puzzles.py
(+736 files in other folders)
