[tool.poetry]
name = "advent_of_code"
version = "0.1.0"
description = "Advent of Code solutions"
repository = "https://github.com/mcuelenaere/advent_of_code"
authors = ["Maurus Cuelenaere <mcuelenaere@gmail.com>"]

[tool.poetry.dependencies]
click = "^6.7"
python = "^3.7"

[tool.poetry.scripts]
run_puzzle = "advent_of_code.run_puzzle:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
