[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

[lib]
name = "advent_of_code"
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
paste = "1.0.6"
itertools = "0.10.1"
md-5 = "0.9.1"
num = "0.4.0"
pyo3 = { version = "0.15.0", features = ["extension-module"] }
rayon = "1.5.1"
regex = "1.5.4"
