[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

[lib]
name = "advent_of_code"
crate-type = ["cdylib"]

[dependencies]
genawaiter = "0.99.1"
lazy_static = "1.4.0"
paste = "1.0.8"
itertools = "0.10.3"
md-5 = "0.10.2"
num = "0.4.0"
pyo3 = { version = "0.16.5", features = ["extension-module"] }
rayon = "1.5.3"
regex = "1.6.0"
