[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

[lib]
name = "advent_of_code"
crate-type = ["cdylib"]

[dependencies]
genawaiter = "0.99.1"
lazy_static = "1.4.0"
paste = "1.0.12"
itertools = "0.10.5"
md-5 = "0.10.5"
num = "0.4.0"
pyo3 = { version = "0.16.6", features = ["extension-module"] }
rayon = "1.6.1"
regex = "1.7.0"
